--- a/TPMaven/pom.xml
+++ b/TPMaven/pom.xml
@@ -26,11 +26,14 @@
               </configuration>
         </plugin>
     </plugins>
+
+    <resources>
+     <resource>
+       <directory>./src/main/resources</directory>
+     </resource>
+   </resources>
   </build>
 
-  <arguments>
-     <argument>arg1</argument>
- 	</arguments>
 
   <dependencies>
     <dependency>
