--- a/Sudoku/ProjetSudoku/GUI/pom.xml
+++ b/Sudoku/ProjetSudoku/GUI/pom.xml
@@ -31,8 +31,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>com.indvd00m.ascii.render</groupId>
+        <artifactId>ascii-render</artifactId>
+        <version>2.1.2</version>
+    </dependency>
   </dependencies>
-
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
